# clamav-exporter

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  cicap.go  clamd.go  clamd_test.go  go.mod  go.sum  icap.go  main.go
