load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mgit-at/clamav-exporter
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "clamd.go",
        "icap.go",
        "main.go",
    ],
    importpath = "github.com/mgit-at/clamav-exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/imgurbot12/clamd:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp:go_default_library",
        "//vendor/github.com/shenwei356/util/bytesize:go_default_library",
    ],
)

go_binary(
    name = "clamav-exporter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["clamd_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/require:go_default_library"],
)
